--- a/src/themes.scss
+++ b/src/themes.scss
@@ -16,8 +16,7 @@ $nb-themes: nb-register-theme((
   // color-primary-800: #102694,
   // color-primary-900: #091c7a,
   text-paragraph-font-family: Poppins,
-  text-subtitle-2-font-family: Poppins
-
+  text-subtitle-2-font-family: Poppins,
 ), default, default);
 
 
