--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -11,5 +11,7 @@
             <p [ngClass]="'componentName'">Your Cards<p>
             <button [ngClass]="'addCard'">New Cards +</button>       
         </div>
+        <app-card></app-card>
     </nb-layout-column>
+    
 </nb-layout>
